# webcheck-py

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-alpine  Dockerfile-playwright  README.md  build_bin.sh  build_image.sh  build_wheel.sh  compose.yaml  devserver.sh  dl_easylist.sh  dl_ranklists.sh  pyproject.toml  webcheck.sh  worker.sh
.github/workflows/: publish.yml  reposcan.yml
container/: entrypoint.sh
src/: rewrite_cache_paths.py  scanhistory.py  wappalyzer_to_sbom.py  webcheckcli.py  webchecksrv.py  webcheckworker.py
src/webcheck/: adblock.py  carbon.py  conf.py  content.py  dns.py  firewall.py  hsts.py  http_headers.py  http_security.py  ip.py  mail_config.py  page.py  ping.py  ports.py  rank.py  redirects.py  robotstxt.py  screenshot.py  securitytxt.py  server_location.py  sitemap.py  social_tags.py  ssl.py  ssl_qualys.py  status.py  traceroute.py  wappalyzer.py  whois.py
src/webcheck/util/: cache_helper.py  content_helper.py  ipinfo_util.py  mongodb_helper.py  mongodb_queue.py
ui/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.css  App.tsx  DomainNetwork.tsx  WebcheckResults.tsx  api.ts  constants.ts  graph-visualization.tsx  index.css  main.tsx
ui/src/components/ui/: button.tsx  card.tsx  input.tsx
ui/src/webcheck/components/Form/: Button.tsx  Card.tsx  Columns.tsx  Heading.tsx  Row.tsx
ui/src/webcheck/components/Results/: Archives.tsx  BlockLists.tsx  BuiltWith.tsx  CarbonFootprint.tsx  Cookies.tsx  (+35 more)
ui/src/webcheck/hooks/: motherOfAllHooks.ts
ui/src/webcheck/utils/: result-processor.ts
(+4 files in other folders)
